--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-  <h1 style="text-align: center;"> <u>Flow Manager</u> </h1>
+  <h1 style="text-align: center;"> <u>Flow Components</u> </h1>
   <div class="row row-button">
-    <button mat-raised-button color="primary" (click)=openAddModal()>Create</button>
-    <button mat-raised-button (click)=updateRow()>Update</button>
-    <button mat-raised-button color="warn" (click)="deleteRowComponent()">Delete</button>
+    <button mat-raised-button color="primary" [disabled]="!isDisableFlowComp" (click)=openAddModal()>Create</button>
+    <button mat-raised-button [disabled]="isDisableFlowComp" (click)=updateRow()>Update</button>
+    <button mat-raised-button color="warn" [disabled]="isDisableFlowComp" (click)="deleteRowComponent()">Delete</button>
   </div>
 
   <div class="col-md-12" style="margin-top: 50px">
@@ -12,32 +12,41 @@
       <label>Selected Flow:</label>
       <span>{{message}}</span>
     </div>
-
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
       [animateRows]="true" class="ag-theme-balham" [columnDefs]="columnDefs" [rowData]="data" [rowSelection]="rowSelection"
-      (selectionChanged)="onSelectionChange()" (gridReady)="onGridReady($event)"></ag-grid-angular>
+      (selectionChanged)="onSelectionChange()" (rowSelected)="onRowSelectedFlowComp($event)" (gridReady)="onGridReady($event)"></ag-grid-angular>
   </div>
 
   <div *ngIf="showConnectors" style="padding:100px">
+    <div>
+      <h1 style="text-align: center;"> <u>Available Connectors</u> </h1>
+    </div>
+    <div *ngIf="isDisableFlowComp">
     <div class="row row-button">
       <button mat-raised-button color="primary" (click)=openAddConnectorModal()>Create</button>
       <button mat-raised-button (click)=updateRowConnector()>Update</button>
       <button mat-raised-button color="warn" (click)="deleteConnector()">Delete</button>
     </div>
+    </div>
+    <div *ngIf="isDisableFlowComp">
     <div class="row">
 
       <div class="col-md-12">
-        <div *ngIf="showMicroFlow">
+        <div *ngIf="showConnectors">
           <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
             (selectionChanged)="onSelectionConnectorChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
             [columnDefs]="connectorColDef" [rowData]="connectorData" (gridReady)="onGridConnectorReady($event)"></ag-grid-angular>
         </div>
       </div>
     </div>
+    </div>
   </div>
 
 
   <div *ngIf="showMicroFlow" style="padding:100px">
+    <div>
+      <h1 style="text-align: center;"> <u>Micro Flow</u> </h1>
+    </div>
     <div class="row row-button">
       <button mat-raised-button color="primary" (click)=openAddMFModal()>Create</button>
       <button mat-raised-button (click)=updateRowMicro()>Update</button>
@@ -160,7 +169,7 @@
         </div>
         <div class="form-group" *ngIf="isCreateModel">
           <button type="button" class="btn button-create" (click)="updateFlowCompModel()">update</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
@@ -219,7 +228,8 @@
         </div>
         <div class="form-group" *ngIf="isUpdateConnector">
           <button type="button" class="btn button-create" (click)="updateConnector()">update</button>
-          <button type="button" class="btn button-close" (click)="onCloseConnectorHandled()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="onCloseConnectorHandledUpdate()">{{ 'cancel' |
+            i18next }}</button>
         </div>
       </div>
     </div>
@@ -279,7 +289,7 @@
         </div>
         <div class="form-group" *ngIf="isUpdateMF">
           <button type="button" class="btn button-create" (click)="updateMicroFlow()">update</button>
-          <button type="button" class="btn button-close" (click)="onCloseMFHandled()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
