--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -18,8 +18,10 @@
             <div class="card-header">{{proj.name}}</div>
             <div class="card-body">
               <div><span>{{proj.description}}</span></div>
-              <button type="button" class="btn btn-primary btn-space pull-right">Edit</button>
-              <button type="button" (click)="openDeleteModel(proj)" class="btn btn-danger btn-space pull-right">Delete</button>
+              <button type="button" [routerLink]="['/desktopscreen']"
+                class="btn btn-primary btn-space pull-right">Edit</button>
+              <button type="button" (click)="openDeleteModel(proj)"
+                class="btn btn-danger btn-space pull-right">Delete</button>
             </div>
           </div>
         </div>
@@ -77,8 +79,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="app-context">{{ 'app_context' | i18next }}</label>
-                <input type="text" class="form-control" placeholder="{{'placeholder_appContext' | i18next}}" id="app-context"
-                  formControlName="appContext" [ngClass]="{ 'is-invalid': submitted && form_control.appContext.errors }">
+                <input type="text" class="form-control" placeholder="{{'placeholder_appContext' | i18next}}"
+                  id="app-context" formControlName="appContext"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.appContext.errors }">
                 <div *ngIf="submitted && form_control.appContext.errors" class="invalid-feedback">
                   <div *ngIf="form_control.appContext.errors.required">{{'require_appContext' | i18next}}</div>
                 </div>
@@ -88,8 +91,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
-                  formControlName="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                <textarea class="form-control" rows="1" id="description"
+                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -101,14 +105,16 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="primary-language">{{ 'primary_language' | i18next }}</label>
-                <select class="form-control" id="primary-language" formControlName="primaryLanguage" [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
+                <select class="form-control" id="primary-language" formControlName="primaryLanguage"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
                   <option value="" selected>{{'select_primary' | i18next}}</option>
                   <option value="english">English</option>
                   <option value="tamil">Tamil</option>
                   <option value="spanish">Spanish</option>
                 </select>
                 <div *ngIf="submitted && form_control.primaryLanguage.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.primaryLanguage.errors.required">{{'require_primaryLanguage' | i18next}}</div>
+                  <div *ngIf="form_control.primaryLanguage.errors.required">{{'require_primaryLanguage' | i18next}}
+                  </div>
                 </div>
               </div>
             </div>
@@ -116,12 +122,14 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="secondary-language">{{ 'secondary_language' | i18next }}</label>
-                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage" [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
+                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
                   <option value="" selected>{{'select_secondary' | i18next}}</option>
                   <option *ngFor="let c of languages" [ngValue]="c">{{ c }}</option>
                 </select>
                 <div *ngIf="submitted && form_control.secondaryLanguage.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.secondaryLanguage.errors.required">{{'require_secondaryLanguage' | i18next}}</div>
+                  <div *ngIf="form_control.secondaryLanguage.errors.required">{{'require_secondaryLanguage' | i18next}}
+                  </div>
                 </div>
               </div>
             </div>
