--- a/application/clients/desktop/src/app/app.component.html
+++ b/application/clients/desktop/src/app/app.component.html
@@ -1,13 +1,4 @@
-<app-layout>
-  <mat-sidenav-container>
-    <mat-sidenav #sidenav role="navigation">
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <app-header-language></app-header-language>
-      <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
-      <main style="margin-top: 100px;">
-        <router-outlet></router-outlet>
-      </main>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-</app-layout>
+<app-header-language></app-header-language>
+<app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+<div style="margin-bottom: 85px;"></div>
+<router-outlet></router-outlet>
