--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -1,70 +1,47 @@
 <div class="container-fluid">
-  <h1 style="text-align: center;"> <u>Flow Components</u> </h1>
+  <h1 style="text-align: center;"> <u>Flows Components</u> </h1>
   <div class="row row-button">
     <button mat-raised-button color="primary" [disabled]="isDisableFlowComp" (click)=openAddModal()>Create</button>
     <button mat-raised-button [disabled]="!isDisableFlowComp" (click)=updateRow()>Update</button>
-    <button mat-raised-button color="warn" [disabled]="!isDisableFlowComp" (click)="deleteRowComponent()">Delete</button>
+    <button mat-raised-button color="warn" [disabled]="!isDisableFlowComp"
+      (click)="deleteRowComponent()">Delete</button>
   </div>
-
-  <div class="col-md-12" style="margin-top: 50px">
-    <div>
-      <button class="btn btn-primary" [routerLink]="['/flow-manager']">Back</button>
-      <label>Selected Flow:</label>
-      <span>{{message}}</span>
-    </div>
+  <div class="flowTable">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      [animateRows]="true" class="ag-theme-balham" [columnDefs]="columnDefs" [rowData]="data" (rowSelected)="onRowSelectedFlowComp($event)" [rowSelection]="rowSelection"
+      [animateRows]="true" class="ag-theme-balham" [columnDefs]="columnDefs" [rowData]="data"
+      (rowSelected)="onRowSelectedFlowComp($event)" [rowSelection]="rowSelection"
       (selectionChanged)="onSelectionChange()" (gridReady)="onGridReady($event)"></ag-grid-angular>
   </div>
 
-  <div *ngIf="showConnectors" style="padding:100px">
-    <div>
-      <h1 style="text-align: center;"> <u>Available Connectors</u> </h1>
-    </div>
-    <div *ngIf="!isDisableFlowComp">
-    <div class="row row-button">
-      <button mat-raised-button color="primary" (click)=openAddConnectorModal()>Create</button>
-      <button mat-raised-button (click)=updateRowConnector()>Update</button>
-      <button mat-raised-button color="warn" (click)="deleteConnector()">Delete</button>
-    </div>
-    </div>
-    <div *ngIf="!isDisableFlowComp">
-    <div class="row">
 
-      <div class="col-md-12">
-        <div *ngIf="showConnectors">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-            (selectionChanged)="onSelectionConnectorChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
-            [columnDefs]="connectorColDef" [rowData]="connectorData" (gridReady)="onGridConnectorReady($event)"></ag-grid-angular>
-        </div>
-      </div>
-    </div>
-    </div>
+  <h1 style="text-align: center;"> <u>Available Connectors</u> </h1>
+  <div class="row row-button">
+    <button mat-raised-button color="primary" (click)=openAddConnectorModal()>Create</button>
+    <button mat-raised-button (click)=updateRowConnector()>Update</button>
+    <button mat-raised-button color="warn" (click)="deleteConnector()">Delete</button>
+  </div>
+  <div class="flowTable">
+    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+      (selectionChanged)="onSelectionConnectorChange()" [rowSelection]="rowSelection" [animateRows]="true"
+      class="ag-theme-balham" [columnDefs]="connectorColDef" [rowData]="connectorData"
+      (gridReady)="onGridConnectorReady($event)"></ag-grid-angular>
   </div>
 
-  <div *ngIf="!isDisableFlowComp">
-  <div *ngIf="showMicroFlow" style="padding:100px">
-    <div>
-      <h1 style="text-align: center;"> <u>Micro Flow</u> </h1>
-    </div>
-    <div class="row row-button">
-      <button mat-raised-button color="primary" (click)=openAddMFModal()>Create</button>
-      <button mat-raised-button (click)=updateRowMicro()>Update</button>
-      <button mat-raised-button color="warn" (click)="deleteMicroFlow()">Delete</button>
-    </div>
-    <div class="row">
 
-      <div class="col-md-12">
-        <div *ngIf="showMicroFlow">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-            (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
-            [columnDefs]="microColDef" [rowData]="microFlow" (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
-        </div>
-      </div>
-    </div>
+  <h1 style="text-align: center;"> <u>Micro Flows</u> </h1>
+  <div class="row row-button">
+    <button mat-raised-button color="primary" (click)=openAddMFModal()>Create</button>
+    <button mat-raised-button (click)=updateRowMicro()>Update</button>
+    <button mat-raised-button color="warn" (click)="deleteMicroFlow()">Delete</button>
   </div>
+  <div class="flowTable">
+    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+      (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true"
+      class="ag-theme-balham" [columnDefs]="microColDef" [rowData]="microFlow"
+      (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
   </div>
 </div>
+
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addModel}">
   <div class="modal-dialog modal-md" role="dialog">
     <div class="modal-content">
@@ -75,7 +52,8 @@
               <div class="form-group">
                 <label for="component_name">Component Name</label>
                 <input type="text" class="form-control" placeholder="Enter component name" id="component_name"
-                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
+                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
                 <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.component_name.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -86,7 +64,8 @@
               <div class="form-group">
                 <label for="label">Label</label>
                 <input type="text" class="form-control" placeholder="{{'placeholder_label' | i18next}}" id="label"
-                  formControlName="label" [(ngModel)]="iFlowComponent.label" [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
+                  formControlName="label" [(ngModel)]="iFlowComponent.label"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
                 <div *ngIf="submitted && form_control.label.errors" class="invalid-feedback">
                   <div *ngIf="form_control.label.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -98,8 +77,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="type">Type</label>
-                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type" [(ngModel)]="iFlowComponent.type"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
+                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type"
+                  [(ngModel)]="iFlowComponent.type" [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
                 <div *ngIf="submitted && form_control.type.errors" class="invalid-feedback">
                   <div *ngIf="form_control.type.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -108,8 +87,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="sequence_id">Sequence Id</label>
-                <input type="text" class="form-control" placeholder="Enter Sequence Id" id="sequence_id" [(ngModel)]="iFlowComponent.sequence_id"
-                  formControlName="sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
+                <input type="text" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
+                  [(ngModel)]="iFlowComponent.sequence_id" formControlName="sequence_id"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
                 <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
                   <div *ngIf="form_control.sequence_id.errors.required">should not be empty</div>
                 </div>
@@ -120,8 +100,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="dev_language">Development Language</label>
-                <input class="form-control" id="dev_language" placeholder="Enter Dev Language" formControlName="dev_language"
-                  [(ngModel)]="iFlowComponent.dev_language" [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
+                <input class="form-control" id="dev_language" placeholder="Enter Dev Language"
+                  formControlName="dev_language" [(ngModel)]="iFlowComponent.dev_language"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
                 <div *ngIf="submitted && form_control.dev_language.errors" class="invalid-feedback">
                   <div *ngIf="form_control.dev_language.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -131,7 +112,8 @@
               <div class="form-group">
                 <label for="dev_framework">Development Framework</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="dev_framework"
-                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework" [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
+                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
                 <div *ngIf="submitted && form_control.dev_framework.errors" class="invalid-feedback">
                   <div *ngIf="form_control.dev_framework.errors.required">should not be empty</div>
                 </div>
@@ -142,8 +124,10 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
-                  formControlName="description" [(ngModel)]="iFlowComponent.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                <textarea class="form-control" rows="1" id="description"
+                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
+                  [(ngModel)]="iFlowComponent.description"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -153,8 +137,9 @@
               <div class="form-group">
                 <div class="form-check">
                   <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" formControlName="connector" [checked]="iFlowComponent.connector"
-                      [(ngModel)]="iFlowComponent.connector" value="">Connector</label>
+                    <input type="checkbox" class="form-check-input" formControlName="connector"
+                      [checked]="iFlowComponent.connector" [(ngModel)]="iFlowComponent.connector"
+                      value="">Connector</label>
                 </div>
               </div>
             </div>
@@ -165,12 +150,14 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="!isDisableFlowComp">
-          <button type="button" class="btn button-create" (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="isDisableFlowComp">
           <button type="button" class="btn button-create" (click)="updateFlowCompModel()">update</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
@@ -200,7 +187,8 @@
               <div class="form-group">
                 <label for="description">Description</label>
                 <input type="text" class="form-control" placeholder="Enter Description" id="description"
-                  formControlName="description" [(ngModel)]="connector.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+                  formControlName="description" [(ngModel)]="connector.description"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -212,8 +200,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="url">URL</label>
-                <input class="form-control" id="url" placeholder="Enter URL" formControlName="url" [(ngModel)]="connector.url"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
+                <input class="form-control" id="url" placeholder="Enter URL" formControlName="url"
+                  [(ngModel)]="connector.url" [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
                 <div *ngIf="submitted && form_control.url.errors" class="invalid-feedback">
                   <div *ngIf="form_control.url.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -225,7 +213,8 @@
       <div class="modal-footer">
         <div class="form-group" *ngIf="!isUpdateConnector">
           <button type="button" class="btn button-create" (click)="createConnector()">{{ 'create' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseConnectorHandled()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseConnectorHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="isUpdateConnector">
           <button type="button" class="btn button-create" (click)="updateConnector()">update</button>
@@ -250,7 +239,8 @@
               <div class="form-group">
                 <label for="sequence_id">Sequence Id</label>
                 <input type="text" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
-                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
+                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
                 <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
                   <div *ngIf="form_control.sequence_id.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -260,8 +250,10 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="component_name">Component Name</label>
-                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name" [value]="selectedFlow[0]?.component_name"
-                  disabled formControlName="component_name" [(ngModel)]="iMicroFlow.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
+                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name"
+                  [value]="selectedFlow[0]?.component_name" disabled formControlName="component_name"
+                  [(ngModel)]="iMicroFlow.component_name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
                 <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.component_name.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -274,9 +266,11 @@
               <div class="form-group">
                 <label for="micro_flow_step_name">Micro Flow name</label>
                 <textarea class="form-control" rows="1" id="micro_flow_step_name" placeholder="Enter Micro Flow Name"
-                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name" [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
+                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
                 <div *ngIf="submitted && form_control.micro_flow_step_name.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.micro_flow_step_name.errors.required">{{'require_description' | i18next}}</div>
+                  <div *ngIf="form_control.micro_flow_step_name.errors.required">{{'require_description' | i18next}}
+                  </div>
                 </div>
               </div>
             </div>
@@ -290,7 +284,8 @@
         </div>
         <div class="form-group" *ngIf="isUpdateMF">
           <button type="button" class="btn button-create" (click)="updateMicroFlow()">update</button>
-          <button type="button" class="btn button-close" (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
