--- a/application/clients/desktop/src/app/component-flows/component-flows.component.scss
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.scss
@@ -1,8 +1,3 @@
-.button {
-    margin-left: 60%;
-    margin-bottom: 10px;
-}
-
 .row-button {
     float: right;
 }
@@ -10,4 +5,8 @@
 .row-button button,
 .row-button a {
     margin-right: 8px;
+}
+
+.flowTable {
+    margin-top: 50px
 }
