--- a/application/clients/desktop/src/app/navigation/header/header.component.scss
+++ b/application/clients/desktop/src/app/navigation/header/header.component.scss
@@ -19,12 +19,12 @@ mat-toolbar{
 
 .mat-toolbar{
     position: fixed;
-    top: 25px;
+    top: 20px;
     z-index: 999;
 }
 
 .mat-toolbar.mat-primary{
-    background: #b1b1b1;
+    background: grey;
 }
  
 @media(max-width: 959px){
