--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -158,7 +158,7 @@
       </div>
       <div class="modal-footer" style="padding: 5px">
         <button type="button" (click)="deleteMyProjects(proj)" class="btn btn-default">Confirm</button>
-        <button type="button" class="btn btn-default">Cancel</button>
+        <button type="button" (click)="onCloseHandled()" class="btn btn-default">{{ 'cancel' | i18next }}</button>
       </div>
     </div>
 
