--- a/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
+++ b/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-  <h1 style="text-align: center;"> <u>Flows</u> </h1>
+  <h1 style="text-align: center;"> <u>{{ 'flows' | i18next }}</u> </h1>
   <div class="row row-button">
-    <button mat-raised-button color="primary" (click)="openModal('create')">Create</button>
-    <button mat-raised-button  (click)="openModal('update')">Update</button>
-    <button mat-raised-button color="warn" (click)="deleteRow()">Delete</button>
+    <button mat-raised-button color="primary" (click)="openModal('create')">{{ 'create' | i18next }}</button>
+    <button mat-raised-button  (click)="openModal('update')">{{ 'update' | i18next }}</button>
+    <button mat-raised-button color="warn" (click)="deleteRow()">{{ 'delete' | i18next }}</button>
   </div>
   <div class="flowTable">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
@@ -72,7 +72,7 @@
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!checkUpdate">
-          <button type="button" class="btn button-create" (click)="updateFlowModel()">update</button>
+          <button type="button" class="btn button-create" (click)="updateFlowModel()">{{ 'update' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandledForUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
