--- a/application/clients/desktop/src/styles.scss
+++ b/application/clients/desktop/src/styles.scss
@@ -8,7 +8,15 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
-html, body { 
-    margin: 0;
+body,
+html,
+#app {
     height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.ag-cell-edit-input {
+    width: 100%;
+    height: 100% !important;
 }
